--- a/assets/style.css
+++ b/assets/style.css
@@ -133,6 +133,9 @@
 .pie-chart{
     height: 384px;
 }
+.shadow{
+    box-shadow: 0 7px 14px 0 rgba(65, 69, 88, 0.1), 0 3px 6px 0 rgba(0, 0, 0, 0.07);;
+}
 @media screen and (max-width:991px) {
     .content-container{
         width: 100% !important;
